--- a/CreatQRLink01.html
+++ b/CreatQRLink01.html
@@ -27,7 +27,7 @@
           <a href="index.html" class='link_home'><img src="img/W_logo.png"></a>
           <nav>
             <a href="NetWorkPage01.html" class='web_menu'>JOIN an NETWORK</a>
-            <a href="CreatQRLink01.html" class='web_menu'>CREATE QR LINK</a>
+            <a href="CreatQRLink01.html" class='web_menu web_a'>CREATE QR LINK</a>
             <a class='web_menu menu_gray'>MENU</a>
             <a href="login.html" class='link_login order_right'>LOG IN</a>
           </nav>
@@ -46,14 +46,7 @@
           <!-- 手機才會顯示・end -->
 
           <div class='cent_boxs'>
-            <div class='cent_box cent_box35'>
-              <p class='bright_type13 m_padB15'> Enter Network Code:</p>
-              <input class='toEnter addEnter borderGray' value="ex: exgz10F" onfocus="this.value=''" onblur="this.value='ex: exgz10F'" >
-            </div>
-
-            <i class='m_border'></i><!-- 手機版・虛線 -->
-
-            <div class='cent_box cent_box65 borderGray_left'>
+            <div class='cent_box'>
               <div class='input_box'>
                 <input class='toEnter addEnter borderGray' value="Full Name*" onfocus="this.value=''" onblur="this.value='Full Name*'" >
               </div>
@@ -164,7 +157,7 @@
 
               <div class='all_box btn_cent m_cent'>
                 <!-- <button class='btn_add icon-plus'></button> -->
-                <a href="NetWorkPage02.html" class='link_gray have_mark order_right m_order_no m_magTop45'>JOIN NETWORK</a>
+                <a href="CreatQRLink02.html" class='link_gray order_right m_order_no m_magTop45 type_uppercase'>create QR Link</a>
               </div>
             </div>
           </div>
