--- a/CreatQRLink03.html
+++ b/CreatQRLink03.html
@@ -27,7 +27,7 @@
           <a href="index.html" class='link_home'><img src="img/W_logo.png"></a>
           <nav>
             <a href="NetWorkPage01.html" class='web_menu'>JOIN an NETWORK</a>
-            <a href="CreatQRLink01.html" class='web_menu'>CREATE QR LINK</a>
+            <a href="CreatQRLink01.html" class='web_menu web_a'>CREATE QR LINK</a>
             <a class='web_menu menu_gray'>MENU</a>
             <a href="login.html" class='link_login order_right'>LOG IN</a>
           </nav>
@@ -46,62 +46,64 @@
           <!-- 手機才會顯示・end -->
 
           <div class='cent_boxs'>
-            <div class='cent_box cent_box35'>
-              <div class='all_box'>
-                <div class='team_pic_box'><img src="img/team.png"></div>
-                <div class='team_type_box'>
-                  <div class='all_box'>
-                    <a href="NetWorkPage04.html" class='team_title'>Intern Team</a>
-                    <a href="NetWorkPage04_3.html" class='link_icon icon-qrcode---FontAwesome'></a>
-                  </div>
-                  <p class='team_type'>Welcome to the new team! Let's get to know each other!</p>
+            <div class='cent_box cent_box35 borderGray_right'>
+              <div class='all_box padTB15 m_no_space'>
+                <p class='note_type'>Share the link or use camera to scan QR code:</p>
+                <div class='input_box input_box_top15 borderGray'>
+                  <div class='toEnter networklink'><a href="#" class='addEnter' >http://selectnshare/haleyhob</a></div>
+                  <button class='btn_status_box c_blue member icon-content_copy'></button>
                 </div>
-              </div>              
+
+                <div class='all_box padT15 w_cent'>
+                  <div class='link_title'>APR 21, 2020 @ 4:32 PM</div>
+                  <img src="img/qr.png">
+                </div>
+              </div>
             </div>
 
             <i class='m_border'></i><!-- 手機版・虛線 -->
 
             <div class='cent_box cent_box65 borderGray_left'>
               <div class='all_box magD30'>
-                <p class='type_data_title'>Jim John</p>
-                <a href='qu_signup.html' class='link_icon link_iocn_gray icon-save'></a>
+                <p class='type_data_title'>Lucy Redder</p>
+                <a href='CreatQRLink04.html' class='link_icon icon-createmode_editedit'></a>
               </div>
 
               <div class='all_box'>
                 <!-- social data -->
                 <!-- 01.email-->
-                <div class='input_box borderBlue'>
+                <div class='input_box borderGray'>
                   <div class='social_box icon-email'></div>
-                  <input class='inEnter' type="text" value="jbteref568328@gmail.com">
-                  <a class='btn_status_box c_gray member icon-chain'></a>
+                  <input class='inEnter addEnter in_all' type="text" value="abcdef568328@gmail.com">
                 </div>
 
                 <!-- 02.Instagram -->
-                <div class='input_box borderBlue'>
+                <div class='input_box borderGray'>
                   <div class='social_box icon-instagram'></div>
-                  <input class='inEnter' type="text" value="JimJohn">
-                  <a class='btn_status_box c_gray member icon-chain'></a>
+                  <input class='inEnter addEnter in_all' type="text" value="LucyRedde">
                 </div>
 
                 <!-- 03.Snapchat -->
-                <div class='input_box borderBlue'>
+                <div class='input_box borderGray'>
                   <div class='social_box icon-snapchat'></div>
-                  <input class='inEnter' type="text" value="jimjohn">
-                  <a class='btn_status_box c_gray member icon-chain'></a>
+                  <input class='inEnter addEnter in_all' type="text" value="lucyredde23">
                 </div>
 
                 <!-- 04.Facebook -->
-                <div class='input_box borderBlue'>
+                <div class='input_box borderGray'>
                   <div class='social_box icon-facebook'></div>
-                  <input class='inEnter' type="text" value="JJ">
-                  <a class='btn_status_box c_gray member icon-chain'></a>
+                  <input class='inEnter addEnter in_all' type="text" value="lr123">
                 </div>
 
                 <!-- 05.Phone -->
-                <div class='input_box borderBlue'>
+                <div class='input_box borderGray'>
                   <div class='social_box icon-phone'></div>
-                  <input class='inEnter' type="text" value="0945678921">
-                  <a class='btn_status_box c_gray member icon-chain'></a>
+                  <input class='inEnter addEnter in_all' type="text" value="0912345678">
+                </div>
+
+                <div class='all_box btn_cent m_cent m_magTop45'>
+                  <p class='note_type lineHeight45'>Join now to access this information later!</p>
+                  <a href="signup.html" class='link_brightBlue order_right m_order_no'>CREATE an ACCOUNT</a>
                 </div>
               </div>  
             </div>
@@ -118,7 +120,6 @@
         </footer>
       </div>
     </div>
-
 
     <!-- 手機menu -->
     <div class='menu_boxs'>
@@ -142,8 +143,6 @@
         <p class='team_type'>or <a href="signup.html" class='link_CreatAcc'>create an account</a></p>
       </div>
     </div>
-
-
   </body>
 </html>
 
