--- a/NetWorkPage02.html
+++ b/NetWorkPage02.html
@@ -32,8 +32,7 @@
             <a href="login.html" class='link_login order_right'>LOG IN</a>
           </nav>
 
-          <div class='m_Hamburg icon-menu'>
-          </div>
+          <div class='m_Hamburg icon-menu'></div>
         </header>
 
         <main>
