--- a/NetWorkPage03.html
+++ b/NetWorkPage03.html
@@ -32,8 +32,7 @@
             <a href="login.html" class='link_login order_right'>LOG IN</a>
           </nav>
 
-          <div class='m_Hamburg icon-menu'>
-          </div>
+          <div class='m_Hamburg icon-menu'></div>
         </header>
 
         <main>
@@ -65,6 +64,7 @@
 
             <div class='cent_box cent_box65 borderGray_left'>
               <input class='toEnter borderBlue' type="text" value="Lucy Redder">
+              
               <p class='bright_type13 padTB15'>Enter the info you want to share:</p>
 
               <div class='all_box'>
