--- a/CreatQRLink02.html
+++ b/CreatQRLink02.html
@@ -27,7 +27,7 @@
           <a href="index.html" class='link_home'><img src="img/W_logo.png"></a>
           <nav>
             <a href="NetWorkPage01.html" class='web_menu'>JOIN an NETWORK</a>
-            <a href="CreatQRLink01.html" class='web_menu'>CREATE QR LINK</a>
+            <a href="CreatQRLink01.html" class='web_menu web_a'>CREATE QR LINK</a>
             <a class='web_menu menu_gray'>MENU</a>
             <a href="login.html" class='link_login order_right'>LOG IN</a>
           </nav>
@@ -45,82 +45,74 @@
           </div>
           <!-- 手機才會顯示・end -->
 
-          <div class='cent_boxs'>
-            <div class='cent_box cent_box35'>
-              <div class='all_box'>
-                <div class='team_pic_box'><img src="img/team.png"></div>
-                <div class='team_type_box'>
-                  <div class='all_box'>
-                    <a class='team_title no_event'>Intern Team</a>
-                    <a class='link_icon no_event_icon icon-qrcode---FontAwesome'></a>
-                  </div>
-                  <p class='team_type no_event'>Welcome to the new team! Let's get to know each other!</p>
-                </div>
-              </div>              
-            </div>
-
-            <i class='m_border'></i><!-- 手機版・虛線 -->
-
-            <div class='cent_box cent_box65 borderGray_left'>
-              <div class='input_box'>
-                <a href='NetWorkPage05.html' class='btn_done'>Done</a>
-                <!-- <button class='btn_done'>Done</button> -->
-              </div>
-
-              <div class='input_box'>
-                <input class='toEnter borderBlue' type="text" value="Lucy Redder">
-              </div>
+         <div class='cent_boxs'>
+            <div class='cent_box'>
+              
+              <input class='toEnter borderBlue' type="text" value="Lucy Redder">
+              
+              <p class='bright_type13 padTB15'>Enter the info you want to share:</p>
 
               <div class='all_box'>
                 <!-- 01.email-->
                 <div class='input_box borderBlue'>
                   <div class='social_box icon-email'></div>
-                  <div class='inEnter' type="text">abcdef568328@gmail.com</div>
+                  <input class='inEnter' type="text" value="Lucy Redder">
                   <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
                 </div>
 
                 <!-- 02.Instagram -->
                 <div class='input_box borderBlue'>
                   <div class='social_box icon-instagram'></div>
-                  <input class='inEnter' type="text" value="LucyRedde">
+                  <input class='inEnter' type="text" value="Lucy Redder">
                   <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
                 </div>
 
                 <!-- 03.Snapchat -->
                 <div class='input_box borderBlue'>
                   <div class='social_box icon-snapchat'></div>
-                  <input class='inEnter' type="text" value="lucyredde23">
+                  <input class='inEnter' type="text" value="Lucy Redder">
                   <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
                 </div>
 
                 <!-- 04.Facebook -->
                 <div class='input_box borderBlue'>
                   <div class='social_box icon-facebook'></div>
-                  <input class='inEnter' type="text" value="lr123">
+                  <input class='inEnter' type="text" value="Lucy Redder">
                   <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
                 </div>
 
                 <!-- 05.Phone -->
                 <div class='input_box borderBlue'>
                   <div class='social_box icon-phone'></div>
-                  <input class='inEnter' type="text" value="0912345678">
+                  <input class='inEnter' type="text" value="Lucy Redder">
                   <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
                 </div>
 
-                <div class='all_box btn_cent m_cent'>
-                  <button class='btn_add icon-plus' onclick="openModal();currentSlide(1)"></button>
-
-                  <!-- 桌機版型 -->
-                  <div class='box70 m_not_show'>
-                    <a href="signup.html" class='link_brightBlue order_right m_order_no'>CREATE an ACCOUNT</a>
-                    <p class='note_type lineHeight45 order_right'>Join now to access this information later!</p>
-                  </div>
-                  <!-- 手機版型 -->
-                  <div class='all_box m_magTop45 w_not_show'>
-                    <p class='note_type lineHeight45'>Join now to access this information later!</p>
-                    <a href="signup.html" class='link_brightBlue order_right m_order_no'>CREATE an ACCOUNT</a>
-                  </div>
+                <!-- 06.Linkedin -->
+                <div class='input_box borderBlue'>
+                  <div class='social_box icon-linkedin'></div>
+                  <input class='inEnter' type="text" value="Lucy Redder">
+                  <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button>
                 </div>
+
+                <!-- 07.Twitter -->
+                <div class='input_box borderBlue'>
+                  <div class='social_box icon-twitter'></div>
+                  <input class='inEnter' type="text" value="Lucy Redder">
+                  <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button>
+                </div>
+
+                <!-- 08.YouTube -->
+                <div class='input_box borderBlue'>
+                  <div class='social_box icon-youtube'></div>
+                  <input class='inEnter' type="text" value="Lucy Redder">
+                  <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button>
+                </div>
+              </div>
+
+              <div class='all_box btn_cent m_cent'>
+                <button class='btn_add icon-plus' onclick="openModal();currentSlide(1)"></button>
+                <a href="CreatQRLink03.html" class='link_brightBlue order_right m_order_no m_magTop45 type_uppercase'>create QR Link</a>
               </div>
             </div>
           </div>
@@ -164,7 +156,6 @@
         </div>
       </div>
     </div>
-
 
     <!-- 手機menu -->
     <div class='menu_boxs'>
