--- a/NetWorkList_my01_v1.html
+++ b/NetWorkList_my01_v1.html
@@ -26,24 +26,22 @@
         <header>
           <a href="index.html" class='link_home'><img src="img/W_logo.png"></a>
           <nav>
-            <a href="NetWorkPage01.html" class='web_menu'>JOIN an NETWORK</a>
-            <a href="CreatQRLink01.html" class='web_menu'>CREATE QR LINK</a>
-            <a class='web_menu menu_gray'>MENU</a>
-            <a href="login.html" class='link_login order_right'>LOG IN</a>
+            <a href="on_NetWorkPage01.html" class='web_menu'>JOIN an NETWORK</a>
+            <a href="on_CreatQRLink01.html" class='web_menu'>CREATE QR LINK</a>
+            <a class='web_menu'>MENU</a>
+            <a href="index.html" class='link_login order_right'>LOG OUT</a>
           </nav>
 
           <div class='m_Hamburg icon-menu'></div>
         </header>
 
         <main>
-          <!-- 手機才會顯示 -->
-          <div class='cent_boxs cent_mobile'>
+          <div class='cent_boxs cent_web'>
             <div class='cent_box'>
-              <a href="login.html" class='m_title_type type_uppercase'>log in</a>
-              <a href="CreatQRLink01.html" class='m_top_type order_right'>Create QR Link</a>
+              <a href="account.html" class='m_title_type type_uppercase'>Lucy Redder</a>
+              <a href="on_CreatQRLink01.html" class='m_top_type order_right w_not_show'>Create QR Link</a>
             </div>
           </div>
-          <!-- 手機才會顯示・end -->
 
           <div class='cent_boxs'>
             <div class='cent_box cent_box35'>
@@ -51,90 +49,74 @@
                 <div class='team_pic_box'><img src="img/team.png"></div>
                 <div class='team_type_box'>
                   <div class='all_box'>
-                    <div class='team_title'>Intern Team</div>
-                    <a href="NetWorkPage04_3.html" class='link_icon icon-qrcode---FontAwesome'></a>
+                    <div class='team_title no_event'>Intern Team</div>
+                    <a href="NetWorkList_my02.html" class='link_icon no_event_icon icon-qrcode---FontAwesome'></a>
                   </div>
-                  <p class='team_type'>Welcome to the new team! Let's get to know each other!</p>
+                  <p class='team_type no_event'>Welcome to the new team! Let's get to know each other!</p>
                 </div>
               </div>
 
               <div class='all_box padTB15 borderGray_TD'>
-                <p class='type_data_title'>My Shared Info</p>
-                <a href='NetWorkPage05.html' class='link_icon icon-remove_red_eyevisibility'></a>
+                <p class='type_data_title no_event'>My Shared Info</p>
+                <a href='NetWorkList_my04.html' class='link_icon no_event_icon icon-remove_red_eyevisibility'></a>
               </div>
-
-              <!-- 網頁版・admin資訊露出・開始 (對應123行，同一個東西) -->
-              <div class='all_box m_not_show'>
-                <p class='type_data_title'>Admin</p>
-
-                <div class='input_box input_box_top15 borderGray'>
-                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <a href='NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
-                </div>
-              </div>
-              <!-- 網頁版・admin資訊露出・結束 -->
             </div>
 
 
             <div class='cent_box cent_box65 borderGray_left'>
               <div class='all_box'>
                 <!-- search -->
-                <div class='input_box borderBrightblue'>
+                <div class='input_box input_search90 borderBrightblue'>
                   <div class='social_box serch_box icon-search'></div>
                   <input class='inEnter addEnter' type="text" value="Search" onfocus="this.value=''" onblur="this.value='Search'">
                 </div>
+
+                <a href='NetWorkList_my01.html' class='btn_done'>Done</a>
+                <!-- <a href='NetWorkList_my01_1.html' class='link_icon icon-createmode_editedit link_icon_search'></a> -->
 
                 <!-- member -->
                 <div class='input_box borderGray'>
                   <div class='social_box member_box icon-user---anticoncopy-3'></div>
                   <input class='inEnter' type="text" value="member name01">
-                  <a href='NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
+                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-cancel'></a>
                 </div>
 
                 <div class='input_box borderGray'>
                   <div class='social_box member_box icon-user---anticoncopy-3'></div>
                   <input class='inEnter' type="text" value="member name02">
-                  <a href='NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
+                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-cancel'></a>
                 </div>
 
                 <div class='input_box borderGray'>
                   <div class='social_box member_box icon-user---anticoncopy-3'></div>
                   <input class='inEnter' type="text" value="member name03">
-                  <a href='NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
+                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-cancel'></a>
                 </div>
 
                 <div class='input_box borderGray'>
                   <div class='social_box member_box icon-user---anticoncopy-3'></div>
                   <input class='inEnter' type="text" value="member name04">
-                  <a href='NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
+                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-cancel'></a>
                 </div>
 
                 <div class='input_box borderGray'>
                   <div class='social_box member_box icon-user---anticoncopy-3'></div>
                   <input class='inEnter' type="text" value="member name05">
-                  <a href='NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
+                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-cancel'></a>
                 </div>
-              </div>
 
-              <i class='m_border_all'></i><!-- 手機版・虛線 -->
-
-              <!-- 手機版・admin資訊露出・開始 -->
-              <div class='all_box padTB15 w_not_show'>
-                <p class='type_data_title'>Admin</p>
-
-                <div class='input_box input_box_top15 borderGray'>
+                <div class='input_box borderGray'>
                   <div class='social_box member_box icon-user---anticoncopy-3'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <a href='NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
+                  <input class='inEnter' type="text" value="member name06">
+                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-cancel'></a>
                 </div>
-              </div>
-              <!-- 手機版admin資訊露出・結束 -->
 
-              <div class='all_box btn_cent m_cent m_magTop45'>
-                <p class='note_type lineHeight45'>Join now to access this information later!</p>
-                <a href="signup.html" class='link_brightBlue order_right m_order_no'>CREATE an ACCOUNT</a>
-              </div>
+                <div class='input_box borderGray'>
+                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
+                  <input class='inEnter' type="text" value="member name07">
+                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-cancel'></a>
+                </div>
+              </div>         
             </div>
           </div>
         </main>
@@ -150,7 +132,6 @@
       </div>
     </div>
 
-
     <!-- 手機menu -->
     <div class='menu_boxs'>
       <div class='all_box m_magTD30 m_padSID20'>
@@ -158,22 +139,17 @@
         <a class='icon-x'></a>
       </div>
 
-      <a href='NetWorkPage01.html' class='lastMenu type_uppercase'>Join Network</a>
-      <a href='CreatQRLink01.html' class='lastMenu type_uppercase'>Create QR Link</a>
-      <a class='lastMenu type_uppercase no_acc'>My Networks</a>
-      <a class='lastMenu type_uppercase no_acc'>Create Network</a>
-      <a class='lastMenu type_uppercase no_acc'>My QR Links</a>
-      <a class='lastMenu type_uppercase no_acc'>My Account</a>
+      <a href='on_NetWorkPage01.html' class='lastMenu type_uppercase'>Join Network</a>
+      <a href='on_CreatQRLink01.html' class='lastMenu type_uppercase'>Create QR Link</a>
+      <a href='NetWorkList01.html' class='lastMenu type_uppercase'>My Networks</a>
+      <a href='CreateNetwork01.html' class='lastMenu type_uppercase'>Create Network</a>
+      <a href='MyQRLink01.html' class='lastMenu type_uppercase'>My QR Links</a>
+      <a href='account.html' class='lastMenu type_uppercase'>My Account</a>
 
       <div class='all_box m_magTD30 m_padSID20'>
-        <a href="login.html" class='link_brightBlue no_mark type_uppercase '>log in</a>
-      </div>
-
-      <div class='all_box'>
-        <p class='team_type'>or <a href="signup.html" class='link_CreatAcc'>create an account</a></p>
+        <a href="index.html" class='link_brightBlue no_mark type_uppercase '>log out</a>
       </div>
     </div>
-
 
   </body>
 </html>
