--- a/on_CreatQRLink02.html
+++ b/on_CreatQRLink02.html
@@ -26,37 +26,42 @@
         <header>
           <a href="index.html" class='link_home'><img src="img/W_logo.png"></a>
           <nav>
-            <a href="NetWorkPage01.html" class='web_menu'>JOIN an NETWORK</a>
-            <a href="CreatQRLink01.html" class='web_menu'>CREATE QR LINK</a>
-            <a class='web_menu menu_gray'>MENU</a>
-            <a href="login.html" class='link_login order_right'>LOG IN</a>
+            <a href="on_NetWorkPage01.html" class='web_menu'>JOIN an NETWORK</a>
+            <a href="on_CreatQRLink01.html" class='web_menu web_a'>CREATE QR LINK</a>
+            <a class='web_menu'>MENU</a>
+            <a href="index.html" class='link_login order_right'>LOG OUT</a>
           </nav>
 
           <div class='m_Hamburg icon-menu'></div>
         </header>
 
         <main>
-          <!-- 手機才會顯示 -->
-          <div class='cent_boxs cent_mobile'>
-            <div class='cent_box'>
-              <a href="login.html" class='m_title_type type_uppercase'>log in</a>
-              <a href="CreatQRLink01.html" class='m_top_type order_right'>Create QR Link</a>
+          <div class='cent_boxs cent_web'>
+            <div class='cent_box cent_box50'>
+              <a href="account.html" class='m_title_type type_uppercase'>Lucy Redder</a>
+            </div>
+
+            <i class='m_border_all2'></i><!-- 手機版・虛線 -->
+
+            <div class='cent_box cent_box50'>
+              <a href="MyQRLink01.html" class='m_top_type order_right m_order_no'>QR Links You Created</a>
             </div>
           </div>
-          <!-- 手機才會顯示・end -->
 
           <div class='cent_boxs'>
-            <div class='cent_box cent_box35'>
-              <div class='all_box'>
-                <div class='team_pic_box'><img src="img/team.png"></div>
-                <div class='team_type_box'>
-                  <div class='all_box'>
-                    <a href="NetWorkPage04.html" class='team_title'>Intern Team</a>
-                    <a href="NetWorkPage04_3.html" class='link_icon icon-qrcode---FontAwesome'></a>
-                  </div>
-                  <p class='team_type'>Welcome to the new team! Let's get to know each other!</p>
+            <div class='cent_box cent_box35 borderGray_right'>
+              <div class='all_box padTB15 m_no_space'>
+                <p class='note_type'>Share the link or use camera to scan QR code:</p>
+                <div class='input_box input_box_top15 borderGray'>
+                  <div class='toEnter networklink'><a href="#" class='addEnter' >http://selectnshare/haleyhob</a></div>
+                  <button class='btn_status_box c_blue member icon-content_copy'></button>
                 </div>
-              </div>              
+
+                <div class='all_box padT15 w_cent'>
+                  <div class='link_title'>APR 21, 2020 @ 4:32 PM</div>
+                  <img src="img/qr.png">
+                </div>
+              </div>
             </div>
 
             <i class='m_border'></i><!-- 手機版・虛線 -->
@@ -64,7 +69,7 @@
             <div class='cent_box cent_box65 borderGray_left'>
               <div class='all_box magD30'>
                 <p class='type_data_title'>Lucy Redder</p>
-                <a href='NetWorkPage06.html' class='link_icon icon-createmode_editedit'></a>
+                <a href='CreatQRLink04.html' class='link_icon icon-createmode_editedit'></a>
               </div>
 
               <div class='all_box'>
@@ -119,7 +124,6 @@
       </div>
     </div>
 
-
     <!-- 手機menu -->
     <div class='menu_boxs'>
       <div class='all_box m_magTD30 m_padSID20'>
@@ -127,23 +131,17 @@
         <a class='icon-x'></a>
       </div>
 
-      <a href='NetWorkPage01.html' class='lastMenu type_uppercase'>Join Network</a>
-      <a href='CreatQRLink01.html' class='lastMenu type_uppercase'>Create QR Link</a>
-      <a class='lastMenu type_uppercase no_acc'>My Networks</a>
-      <a class='lastMenu type_uppercase no_acc'>Create Network</a>
-      <a class='lastMenu type_uppercase no_acc'>My QR Links</a>
-      <a class='lastMenu type_uppercase no_acc'>My Account</a>
+      <a href='on_NetWorkPage01.html' class='lastMenu type_uppercase'>Join Network</a>
+      <a href='on_CreatQRLink01.html' class='lastMenu type_uppercase'>Create QR Link</a>
+      <a href='NetWorkList01.html' class='lastMenu type_uppercase'>My Networks</a>
+      <a href='CreateNetwork01.html' class='lastMenu type_uppercase'>Create Network</a>
+      <a href='MyQRLink01.html' class='lastMenu type_uppercase'>My QR Links</a>
+      <a href='account.html' class='lastMenu type_uppercase'>My Account</a>
 
       <div class='all_box m_magTD30 m_padSID20'>
-        <a href="login.html" class='link_brightBlue no_mark type_uppercase '>log in</a>
-      </div>
-
-      <div class='all_box'>
-        <p class='team_type'>or <a href="signup.html" class='link_CreatAcc'>create an account</a></p>
+        <a href="index.html" class='link_brightBlue no_mark type_uppercase '>log out</a>
       </div>
     </div>
-
-
   </body>
 </html>
 
