--- a/NetWorkList_ot04.html
+++ b/NetWorkList_ot04.html
@@ -26,7 +26,7 @@
         <header>
           <a href="index.html" class='link_home'><img src="img/W_logo.png"></a>
           <nav>
-            <a href="on_NetWorkPage01.html" class='web_menu web_a'>JOIN an NETWORK</a>
+            <a href="on_NetWorkPage01.html" class='web_menu'>JOIN an NETWORK</a>
             <a href="on_CreatQRLink01.html" class='web_menu'>CREATE QR LINK</a>
             <a class='web_menu'>MENU</a>
             <a href="index.html" class='link_login order_right'>LOG OUT</a>
@@ -62,7 +62,7 @@
 
             <div class='cent_box cent_box65 borderGray_left'>
               <div class='input_box'>
-                <a href='on_NetWorkPage05.html' class='btn_done'>Done</a>
+                <a href='NetWorkList_ot03.html' class='btn_done'>Done</a>
                 <!-- <button class='btn_done'>Done</button> -->
               </div>
 
