--- a/NetWorkList_my04.html
+++ b/NetWorkList_my04.html
@@ -44,53 +44,59 @@
           </div>
 
           <div class='cent_boxs'>
-            <div class='cent_box'>
+            <div class='cent_box cent_box35'>
               <div class='all_box'>
-                <div class='team_type_box m_no_space'>
-                  <div class='input_box'>
-                    <a href='NetWorkList_my02.html' class='btn_done'>Done</a>
+                <div class='team_pic_box'><img src="img/team.png"></div>
+                <div class='team_type_box'>
+                  <div class='all_box'>
+                    <div class='team_title'>Intern Team</div>
+                    <a href="NetWorkList_my02.html" class='link_icon icon-qrcode---FontAwesome'></a>
                   </div>
-                </div>
-
-                <div class='input_box'>
-                  <input class='toEnter borderBlue' type="text" value="Intern Team">
-                </div>
-                <div class='input_box'>
-                  <textarea class='toEnter no_hid borderBlue'>Welcome to the new team! Let's get to know each other!</textarea>
+                  <p class='team_type'>Welcome to the new team! Let's get to know each other!</p>
                 </div>
               </div>
+            </div>
 
-              <div class='all_box padTB15 borderGray_T'>
-                <p class='type_data_title type_data_gray'>Network Code</p>
+            <i class='m_border'></i><!-- 手機版・虛線 -->
 
-                <div class='input_box input_box_top15'>
-                  <p class='link_code img_op'>H2cR531</p>
-                  <button class='btn_status_box no_event member c_blue_po member icon-content_copy'></button>
-                </div>
-              </div>
-
-              <div class='all_box padTB15 borderGray_D'>
-                <p class='type_data_title type_data_gray'>Network Link</p>
-                <div class='input_box input_box_top15 borderGray'>
-                  <div class='toEnter networklink'><a href="#" class='addEnter addEnter2' >http://selectnshare/haleyhob</a></div>
-                  <button class='btn_status_box no_event member icon-content_copy'></button>
-                </div>
-
-                <div class='all_box padT15 w_cent'>
-                  <div class='link_title link100 link_title_gray'>APR 21, 2020 @ 4:32 PM</div>
-                  <img class='img_op' src="img/qr.png">
-                </div>
+            <div class='cent_box cent_box65 borderGray_left'>
+              <div class='all_box magD30'>
+                <p class='type_data_title'>Lucy Redder</p>
+                <a href='NetWorkList_my05.html' class='link_icon icon-createmode_editedit'></a>
               </div>
 
               <div class='all_box'>
-                <p class='type_data_title'>Admin</p>
-
-                <div class='input_box input_box_top15 borderGray'>
-                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
+                <!-- social data -->
+                <!-- 01.email-->
+                <div class='input_box borderGray'>
+                  <div class='social_box icon-email'></div>
+                  <input class='inEnter addEnter in_all' type="text" value="abcdef568328@gmail.com">
                 </div>
-              </div>
+
+                <!-- 02.Instagram -->
+                <div class='input_box borderGray'>
+                  <div class='social_box icon-instagram'></div>
+                  <input class='inEnter addEnter in_all' type="text" value="LucyRedde">
+                </div>
+
+                <!-- 03.Snapchat -->
+                <div class='input_box borderGray'>
+                  <div class='social_box icon-snapchat'></div>
+                  <input class='inEnter addEnter in_all' type="text" value="lucyredde23">
+                </div>
+
+                <!-- 04.Facebook -->
+                <div class='input_box borderGray'>
+                  <div class='social_box icon-facebook'></div>
+                  <input class='inEnter addEnter in_all' type="text" value="lr123">
+                </div>
+
+                <!-- 05.Phone -->
+                <div class='input_box borderGray'>
+                  <div class='social_box icon-phone'></div>
+                  <input class='inEnter addEnter in_all' type="text" value="0912345678">
+                </div>
+              </div>  
             </div>
           </div>
         </main>
