--- a/NetWorkList_ot01.html
+++ b/NetWorkList_ot01.html
@@ -26,7 +26,7 @@
         <header>
           <a href="index.html" class='link_home'><img src="img/W_logo.png"></a>
           <nav>
-            <a href="on_NetWorkPage01.html" class='web_menu web_a'>JOIN an NETWORK</a>
+            <a href="on_NetWorkPage01.html" class='web_menu'>JOIN an NETWORK</a>
             <a href="on_CreatQRLink01.html" class='web_menu'>CREATE QR LINK</a>
             <a class='web_menu'>MENU</a>
             <a href="index.html" class='link_login order_right'>LOG OUT</a>
@@ -49,8 +49,8 @@
                 <div class='team_pic_box'><img src="img/team.png"></div>
                 <div class='team_type_box'>
                   <div class='all_box'>
-                    <a href="on_NetWorkPage04.html" class='team_title'>Intern Team</a>
-                    <a href="on_NetWorkPage04_3.html" class='link_icon icon-qrcode---FontAwesome'></a>
+                    <div class='team_title'>Intern Team</div>
+                    <a href="NetWorkList_ot02.html" class='link_icon icon-qrcode---FontAwesome'></a>
                   </div>
                   <p class='team_type'>Welcome to the new team! Let's get to know each other!</p>
                 </div>
@@ -58,7 +58,7 @@
 
               <div class='all_box padTB15 borderGray_TD'>
                 <p class='type_data_title'>My Shared Info</p>
-                <a href='on_NetWorkPage05.html' class='link_icon icon-remove_red_eyevisibility'></a>
+                <a href='NetWorkList_ot03.html' class='link_icon icon-remove_red_eyevisibility'></a>
               </div>
 
               <!-- 網頁版・admin資訊露出・開始 (對應123行，同一個東西) -->
@@ -67,7 +67,7 @@
 
                 <div class='input_box input_box_top15 borderGray'>
                   <div class='social_box member_box icon-user---anticoncopy-3'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
+                  <input class='inEnter' type="text" value="JohnWang">
                   <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
                 </div>
               </div>
@@ -135,7 +135,7 @@
 
                 <div class='input_box input_box_top15 borderGray'>
                   <div class='social_box member_box icon-user---anticoncopy-3'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
+                  <input class='inEnter' type="text" value="JohnWang">
                   <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
                 </div>
               </div>
