--- a/NetWorkList_ot02.html
+++ b/NetWorkList_ot02.html
@@ -46,39 +46,34 @@
           <div class='cent_boxs'>
             <div class='cent_box'>
               <div class='all_box'>
-                <div class='team_type_box m_no_space'>
-                  <div class='input_box'>
-                    <a href='NetWorkList_my02.html' class='btn_done'>Done</a>
+                <div class='team_pic_box'><img src="img/team.png"></div>
+                <div class='team_type_box'>
+                  <div class='all_box'>
+                    <a href="NetWorkList_ot01.html" class='team_title'>Intern Team</a>
                   </div>
-                </div>
-
-                <div class='input_box'>
-                  <input class='toEnter borderBlue' type="text" value="Intern Team">
-                </div>
-                <div class='input_box'>
-                  <textarea class='toEnter no_hid borderBlue'>Welcome to the new team! Let's get to know each other!</textarea>
+                  <p class='team_type'>Welcome to the new team! Let's get to know each other!</p>
                 </div>
               </div>
 
               <div class='all_box padTB15 borderGray_T'>
-                <p class='type_data_title type_data_gray'>Network Code</p>
+                <p class='type_data_title'>Network Code</p>
 
                 <div class='input_box input_box_top15'>
-                  <p class='link_code img_op'>H2cR531</p>
-                  <button class='btn_status_box no_event member c_blue_po member icon-content_copy'></button>
+                  <p class='link_code'>H2cR531</p>
+                  <button class='btn_status_box c_blue c_blue_po member icon-content_copy'></button>
                 </div>
               </div>
 
               <div class='all_box padTB15 borderGray_D'>
-                <p class='type_data_title type_data_gray'>Network Link</p>
+                <p class='type_data_title'>Network Link</p>
                 <div class='input_box input_box_top15 borderGray'>
-                  <div class='toEnter networklink'><a href="#" class='addEnter addEnter2' >http://selectnshare/haleyhob</a></div>
-                  <button class='btn_status_box no_event member icon-content_copy'></button>
+                  <div class='toEnter networklink'><a href="#" class='addEnter' >http://selectnshare/haleyhob</a></div>
+                  <button class='btn_status_box c_blue member icon-content_copy'></button>
                 </div>
 
                 <div class='all_box padT15 w_cent'>
-                  <div class='link_title link100 link_title_gray'>APR 21, 2020 @ 4:32 PM</div>
-                  <img class='img_op' src="img/qr.png">
+                  <div class='link_title link100'>APR 21, 2020 @ 4:32 PM</div>
+                  <img src="img/qr.png">
                 </div>
               </div>
 
@@ -87,7 +82,7 @@
 
                 <div class='input_box input_box_top15 borderGray'>
                   <div class='social_box member_box icon-user---anticoncopy-3'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
+                  <input class='inEnter' type="text" value="JohnWang">
                   <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
                 </div>
               </div>
